--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,16 +27,31 @@ services:
 
   mysql:
     image: mysql
-    command: --default-authentication-plugin=mysql_native_password
     restart: always
     container_name: d_mysql
     environment:
-      - "MYSQL_ROOT_PASSWORD=root"
-      - "MYSQL_DATABASE=symfony"
-      - "MYSQL_USER=admin"
-      - "MYSQL_PASSWORD=root"
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: symfony
+      MYSQL_PASSWORD: root
     ports:
-      - "3306:3337"
+      - "3306:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
+    networks:
+      - myProject
+
+  phpmyadmin:
+    depends_on:
+      - mysql
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    container_name: d_phpmyadmin
+
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "8090:80"
     networks:
       - myProject
 
@@ -52,3 +67,6 @@ services:
 networks:
   myProject:
     driver: bridge
+
+volumes:
+  dbdata:
