--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
     "symfony/mailer": "6.3.*",
     "symfony/runtime": "6.3.*",
     "symfony/security-bundle": "6.3.*",
-    "symfony/yaml": "6.3.*"
+    "symfony/twig-bundle": "6.3.*",
+    "symfony/yaml": "6.3.*",
+    "twig/extra-bundle": "^2.12|^3.0",
+    "twig/twig": "^2.12|^3.0"
   },
   "config": {
     "allow-plugins": {
@@ -70,6 +73,7 @@
     }
   },
   "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.4",
     "symfony/maker-bundle": "^1.51"
   }
 }
