--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -9,6 +9,7 @@ framework:
     # Remove or comment this section to explicitly disable session support.
     session:
         handler_id: null
+#        handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\RedisSessionHandler
         cookie_secure: auto
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
