fix redis sessions

--- a/.env
+++ b/.env
@@ -34,6 +34,4 @@ APP_SECRET=7b8bbc7b3a60d3b91caff9ee9d300bd7
 MAILER_DSN=smtp://mailer:1025
 ###< symfony/mailer ###
 
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_PASSWORD=null
+REDIS_URL=redis://redis:6379?timeout=5
