--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.4",
+    "joshtronic/php-loremipsum": "^2.1",
     "symfony/maker-bundle": "^1.51"
   }
 }
