--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=7b8bbc7b3a60d3b91caff9ee9d300bd7
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
- DATABASE_URL="mysql://root:root@d_mysql:3306/symfony?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+ DATABASE_URL="mysql://root:root@mysql:3306/symfony?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://root:root@127.0.0.1:3306/symfony?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
@@ -35,3 +35,9 @@ MAILER_DSN=smtp://mailer:1025
 ###< symfony/mailer ###
 
 REDIS_URL=redis://redis:6379?timeout=5
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+ MESSENGER_TRANSPORT_DSN=redis://redis:6379/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
