--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,16 @@
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
+    "jolicode/elastically": "^1.8",
     "predis/predis": "^2.2",
     "symfony/console": "6.3.*",
     "symfony/dotenv": "6.3.*",
     "symfony/flex": "^2",
     "symfony/form": "6.3.*",
     "symfony/framework-bundle": "6.3.*",
+    "symfony/http-client": "6.3.*",
     "symfony/mailer": "6.3.*",
+    "symfony/messenger": "6.3.*",
     "symfony/runtime": "6.3.*",
     "symfony/security-bundle": "6.3.*",
     "symfony/twig-bundle": "6.3.*",
